Add the ability to answer all poll questions at once

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,3 +2,20 @@
 //
 // You can also create SCSS files in the app/assets/stylesheets/custom/
 // folder and they will be loaded automatically.
+
+.poll-answers-form {
+  .help-text {
+    display: block;
+    font-size: 1rem;
+    margin: 0 0 $line-height / 2;
+  }
+
+  .question-answer {
+    display: flex;
+    margin-bottom: 0.5rem;
+  }
+
+  [type="radio"] {
+    margin-bottom: 0;
+  }
+}
