--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -13,7 +13,7 @@
   <div class="top-bar">
     <h1 class="top-bar-title">
       <%= link_to root_path, accesskey: "0" do %>
-        <%= image_tag(image_path_for("logo_header.png"), alt: setting["org_name"]) %>
+        <%= image_tag("innoviris-logo-vector.svg", alt: setting["org_name"]) %>
       <% end %>
     </h1>
 
