Replace the CONSUL logo with Innoviris SVG version

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -29,3 +29,12 @@
     border-right: 0;
   }
 }
+
+.top-bar {
+  .top-bar-title a img {
+    @include breakpoint(medium) {
+      width: 10rem;
+      margin: $line-height / 3 0;
+    }
+  }
+}
