--- a/app/assets/stylesheets/_consul_custom_overrides.scss
+++ b/app/assets/stylesheets/_consul_custom_overrides.scss
@@ -10,3 +10,6 @@
 //
 // The variables you can override are defined in the
 // `_settings.scss` and `_consul_settings.scss` files.
+
+$brand: #213b87;
+$brand-secondary: #68c0b5;
