Update public header styles to match the Innoviris style guide

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -32,3 +32,14 @@
     }
   }
 }
+
+.public > .wrapper > header {
+  .top-bar {
+    color: $black;
+    background-color: $white;
+
+    a {
+      font-weight: bold;
+    }
+  }
+}
