--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,6 +24,16 @@
   }
 }
 
+
+body:not(.admin) {
+  .top-links {
+    @include full-width-border(bottom, 1px solid $border, $adjust-padding: true);
+
+    background: $white;
+    color: $black;
+  }
+}
+
 .top-bar {
   .top-bar-title a img {
     @include breakpoint(medium) {
