Add more space between questions

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,6 +10,10 @@
     margin: 0 0 $line-height / 2;
   }
 
+  .question-answer-fields {
+    margin-bottom: $line-height;
+  }
+
   .question-answer {
     display: flex;
     margin-bottom: 0.5rem;
