Hide the Menu button when there's nothing to show
Note that the `content_block` helper isn't available when we call the
`Layout::SubnavigationComponent.new.render?` and
`Layout::TopLinksComponent.new.render?` methods. As a workaround, we're
duplicating what the `content_block` helper does. Another options would
be creating a component which does what this helper does, like we did
with the `Shared::LinkListComponent`.

--- a/app/components/custom/layout/responsive_menu_component.html.erb
+++ b/app/components/custom/layout/responsive_menu_component.html.erb
@@ -7,7 +7,7 @@
 
 <div id="responsive-menu">
   <div class="top-bar-right">
-    <% if current_user && !current_user.guest || Rails.application.config.sign_in_links %>
+    <% if show_sign_in_links? %>
       <ul class="menu" data-responsive-menu="medium-dropdown">
         <%= render "shared/admin_login_items" %>
         <%= render "layouts/notification_item" %>
