Update poll header and more-info section colors

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -64,8 +64,14 @@ body:not(.admin) {
   }
 }
 
-.footer {
+.footer,
+.polls-show-header,
+.poll-more-info {
   background: #e1f2f0;
+}
+
+.poll-more-info {
+  @include full-width-background;
 }
 
 .home-page {
