Adjust size of header and footer logos
So the main logo is bigger than the logos in the footer, on all screen
sizes.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -52,8 +52,12 @@ body:not(.admin) {
 
 .top-bar {
   .top-bar-title a img {
+    @include breakpoint(small only) {
+      height: 3.5rem;
+    }
+
     @include breakpoint(medium) {
-      width: 10rem;
+      width: 12rem;
       margin: $line-height / 3 0;
     }
   }
@@ -74,6 +78,23 @@ body:not(.admin) {
 .polls-show-header,
 .poll-more-info {
   background: #e1f2f0;
+}
+
+.footer {
+  .logo img {
+    @include breakpoint(small only) {
+      height: 1.5rem;
+      width: auto;
+    }
+
+    @include breakpoint(medium) {
+      width: 7rem;
+    }
+  }
+
+  .footer-sections img {
+    height: 3rem;
+  }
 }
 
 .poll-more-info {
