Slightly darken the default Foundation alert color
The Foundation default alert color does not contrast enough
with our `$white` background color definition, so forms error
messages and labels do not accomplish WCAG rules when
related input had errors.

--- a/app/assets/stylesheets/_consul_custom_overrides.scss
+++ b/app/assets/stylesheets/_consul_custom_overrides.scss
@@ -13,3 +13,10 @@
 
 $brand: #213b87;
 $brand-secondary: #68c0b5;
+$foundation-palette: (
+  primary: #1779ba,
+  secondary: #767676,
+  success: #3adb76,
+  warning: #ffae00,
+  alert: darken(#cc4b37, 1%),
+) !default;
